# cv-gen

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  start.sh  stop.sh
backend/: Dockerfile  pyproject.toml
backend/examples/: sample_cv.md
backend/src/cv_gen/: __init__.py  api.py  cli.py  extractors.py  models.py  parser.py  renderer.py
backend/src/cv_gen/ai/: __init__.py  base.py  prompt.py
backend/src/cv_gen/ai/providers/: __init__.py  anthropic.py  google.py  openai.py
backend/src/cv_gen/templates/minimal/: template.html
backend/src/cv_gen/templates/modern/: style.css  template.html
backend/tests/: test_ai.py  test_cli.py  test_extractors.py  test_parser.py  test_renderer.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.svelte  api.js  app.js  style.css
frontend/src/components/: MarkdownEditor.svelte  Preview.svelte  TemplateSelector.svelte  cv-suggestions.css  cv-suggestions.js  doc-upload.css  doc-upload.js  job-adapt.css  job-adapt.js  markdown-editor.css  markdown-editor.js  pdf-preview.css  pdf-preview.js  template-selector.css  template-selector.js
src/cv_gen/: api.py
src/cv_gen/templates/minimal/: style.css
src/cv_gen/templates/modern/: style.css  template.html
tests/: test_api.py  test_renderer.py
