[project]
name = "cv-gen"
version = "0.1.0"
description = "Generador de CVs en PDF desde Markdown"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "markdown>=3.5",
    "python-frontmatter>=1.0",
    "weasyprint>=60.0",
]

[project.scripts]
cv-gen = "cv_gen.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cv_gen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.0",
]
